CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(Ahmidas CXX)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
SET(CMAKE_PREFIX_PATH ${PROJECT_SOURCE_DIR})

# Options for setting the type of build
OPTION(USE_MPI "Build Ahmidas for use on parallel systems, using MPI for parallelism." OFF)
OPTION(USE_SCALAR "Build Ahmidas for use on scalar systems [default]." ON)

FIND_PACKAGE(Eigen3)

INCLUDE_DIRECTORIES(BEFORE SYSTEM src ${EIGEN3_INCLUDE_DIR})
SET(CMAKE_CXX_FLAGS "-O3")

IF(USE_MPI)
SET(MPI_COMPILE_FLAGS "-O3")
ENDIF(USE_MPI)

IF(USE_SCALAR)
INCLUDE_DIRECTORIES(BEFORE SYSTEM arch/scalar)
ADD_SUBDIRECTORY(arch/scalar)
ENDIF(USE_SCALAR)

IF(USE_MPI)
FIND_PACKAGE(MPI REQUIRED)
FIND_PACKAGE(LEMON QUIET)
INCLUDE_DIRECTORIES(BEFORE SYSTEM arch/mpi)
IF(LEMON_FOUND)
MESSAGE(STATUS "Lemon available, so I/O will be implemented over MPI.")
INCLUDE_DIRECTORIES(BEFORE SYSTEM arch/mpi)
ELSE(LEMON_FOUND)
MESSAGE(STATUS "Lemon not available, so I/O will be essentially serial.")
ENDIF(LEMON_FOUND)
ADD_SUBDIRECTORY(arch/mpi)
ENDIF(USE_MPI)

# ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(test)

ADD_EXECUTABLE(main src/main.cpp)
TARGET_LINK_LIBRARIES(main Base IO Lime)
